--- a/docs/src/twoslash.css
+++ b/docs/src/twoslash.css
@@ -7,16 +7,10 @@ html[data-theme="light"] {
   --twoslash-popup-color: inherit;
   --twoslash-popup-shadow: rgba(0, 0, 0, 0.08) 0px 1px 4px;
   --twoslash-docs-color: #525252;
-  --twoslash-docs-font: sans-serif;
-  --twoslash-code-font: inherit;
   --twoslash-code-font-size: 1em;
   --twoslash-matched-color: inherit;
   --twoslash-unmatched-color: #888;
   --twoslash-cursor-color: #8888;
-  --twoslash-error-color: #d45656;
-  --twoslash-error-bg: #d4565620;
-  --twoslash-warn-color: #c37d0d;
-  --twoslash-warn-bg: #c37d0d20;
   --twoslash-tag-color: #3772cf;
   --twoslash-tag-bg: #3772cf20;
   --twoslash-tag-warn-color: var(--twoslash-warn-color);
@@ -33,16 +27,10 @@ html[data-theme="dark"] {
   --twoslash-popup-color: inherit;
   --twoslash-popup-shadow: rgba(0, 0, 0, 0.08) 0px 1px 4px;
   --twoslash-docs-color: #a3a3a3;
-  --twoslash-docs-font: sans-serif;
-  --twoslash-code-font: inherit;
   --twoslash-code-font-size: 1em;
   --twoslash-matched-color: inherit;
   --twoslash-unmatched-color: #888;
   --twoslash-cursor-color: #8888;
-  --twoslash-error-color: #d45656;
-  --twoslash-error-bg: #d4565620;
-  --twoslash-warn-color: #c37d0d;
-  --twoslash-warn-bg: #c37d0d20;
   --twoslash-tag-color: #3772cf;
   --twoslash-tag-bg: #3772cf20;
   --twoslash-tag-warn-color: var(--twoslash-warn-color);
@@ -95,13 +83,13 @@ html[data-theme="dark"] {
 }
 
 .twoslash-popup-code {
-  font-family: var(--twoslash-code-font);
+  @apply font-mono;
   font-size: var(--twoslash-code-font-size);
 }
 
 .twoslash-popup-docs {
+  @apply font-sans;
   color: var(--twoslash-docs-color);
-  font-family: var(--twoslash-docs-font);
   font-size: 0.8em;
   border-top: 1px solid var(--twoslash-border-color);
 }
@@ -109,13 +97,11 @@ html[data-theme="dark"] {
 .twoslash-popup-error {
   color: var(--twoslash-error-color);
   background-color: var(--twoslash-error-bg);
-  font-family: var(--twoslash-docs-font);
   font-size: 0.8em;
 }
 
 .twoslash-popup-docs-tags {
   @apply flex flex-col;
-  font-family: var(--twoslash-docs-font);
 }
 
 .twoslash-popup-docs-tags,
@@ -125,4 +111,35 @@ html[data-theme="dark"] {
 
 .twoslash-popup-docs-tag-name {
   font-family: var(--twoslash-code-font);
+}
+
+.twoslash-error-line {
+  @apply px-3 py-2 my-1 border-l-4 border-solid border-red-400 dark:border-red-600 relative w-max min-w-full bg-red-100 dark:bg-red-1000 text-black dark:text-white;
+}
+
+.twoslash-error-line.twoslash-error-level-warning {
+  @apply bg-yellow-75 dark:bg-yellow-1000 border-yellow-400 dark:border-yellow-600;
+}
+
+.twoslash-error {
+  background: url("data:image/svg+xml,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%206%203'%20enable-background%3D'new%200%200%206%203'%20height%3D'3'%20width%3D'6'%3E%3Cg%20fill%3D'%23c94824'%3E%3Cpolygon%20points%3D'5.5%2C0%202.5%2C3%201.1%2C3%204.1%2C0'%2F%3E%3Cpolygon%20points%3D'4%2C0%206%2C2%206%2C0.6%205.4%2C0'%2F%3E%3Cpolygon%20points%3D'0%2C2%201%2C3%202.4%2C3%200%2C0.6'%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E")
+    repeat-x bottom left;
+  padding-bottom: 2px;
+}
+
+.twoslash-error.twoslash-error-level-warning {
+  background: url("data:image/svg+xml,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%206%203'%20enable-background%3D'new%200%200%206%203'%20height%3D'3'%20width%3D'6'%3E%3Cg%20fill%3D'%23c37d0d'%3E%3Cpolygon%20points%3D'5.5%2C0%202.5%2C3%201.1%2C3%204.1%2C0'%2F%3E%3Cpolygon%20points%3D'4%2C0%206%2C2%206%2C0.6%205.4%2C0'%2F%3E%3Cpolygon%20points%3D'0%2C2%201%2C3%202.4%2C3%200%2C0.6'%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E")
+    repeat-x bottom left;
+  padding-bottom: 2px;
+}
+
+@supports selector(:has(+ *)) {
+  .twoslash-popup-type:has(+ .twoslash-popup-docs) {
+    @apply mb-1;
+  }
+}
+@supports not selector(:has(+ *)) {
+  .twoslash-popup-type {
+    @apply mb-1;
+  }
 }
